--- a/css/wheelbarrow.css
+++ b/css/wheelbarrow.css
@@ -3,13 +3,13 @@ html {
 }
 
 img {
-  position: relative;
+  position: absolute;
   z-index: 11;
   cursor: pointer;
 }
 
 .wrapper {
-  position: relative;
+  position: absolute;
   width: 960px;
   height: 100vh;
   margin: 0 auto;
@@ -22,9 +22,9 @@ img {
 }
 
 #wheelbarrow { 
-  position: relative;
+  position: absolute;
   background: url(../images/wheelbarrow.png) no-repeat;
-  z-index: 0;
+  z-index: 10;
   top: 220px;
 }
 #wheelbarrow-foreground {
